--- a/mydev.html
+++ b/mydev.html
@@ -8,6 +8,7 @@
     <title>Finish this corona</title>
 
     <link rel="stylesheet" href="devcss.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
 </head>
 
 <body>
@@ -36,11 +37,11 @@
             <li><a href="#">Contact Us</a></li>
 
             <div id="reg1">
-                <li style="margin-left: 910px;"><a href="#">login</a></li>
+                <li style="margin-left: 910px;"><a href="login.html">login</a></li>
             </div>
             <div id="reg2">
 
-                <li><a href="#">signup</a></li>
+                <li><a href="signup.html">signup</a></li>
 
             </div>
         </ul>
@@ -108,6 +109,9 @@
                     target="_blank">Remdesivir-Black_marketing</a></li>
             <li><a href="https://www.who.int/emergencies/diseases/novel-coronavirus-2019/question-and-answers-hub/q-a-detail/coronavirus-disease-covid-19-dexamethasone"
                     target="_blank">Remdesivir-substitute</a></li>
+                    <li><a href="https://en.m.wikipedia.org/wiki/COVID-19_vaccination_in_India" target="_blank">Vaccination in India</a></li>
+                    <li><a href="https://www.frontiersin.org/articles/10.3389/fpubh.2020.00482/full" target="_blank">social_awareness</a></li>
+                    <li><a href="https://www.mohfw.gov.in/covid_vaccination/vaccination/faqs.html#about-the-vaccine" target="_blank">FAQ about vaccines</a></li>
         </ul>
         <div id="directarticle">India currently has two Covid-19 vaccines being manufactured locally: <b> Covishield and
                 Covaxin</b>, and we can expect five more vaccines by Q3 2021. These vaccines are <b>Sputnik V
@@ -136,7 +140,9 @@
     <hr>
     <div id="importantlinks">
         <ul>
-            <li><a href="https://www.cowin.gov.in/home" target="_blank">Registeration for vaccination</a></li>
+            <li><a href="https://www.cowin.gov.in/home" target="_blank">Registeration for vaccination</a></li></ul>
+            <img src="getvaccinated4.png" alt="#GetVaccinated" width="100%">
+            <ul>
             <div id="link1">
                 we the youth of India should step forward in these times as it is our responsibilty to direct our
                 nation.
@@ -146,7 +152,11 @@
                 Put <a href="https://twitter.com/hashtag/getvaccinated?lang=en" target="_blank">#GetVaccinated</a> on
                 your social media stories/statuses and encourage your friends/families/relatives to get vaccinated.
                 <br>
-                18+ can register for vaccination on the above link[against the bullet].
+                18+ can register for vaccination on the above link[against the bullet]. 
+                <br><br> <br><br>
+                <img src="getvaccinated.jpg" alt="#GetVaccinated" height="280px" width="33%">
+                <img src="getvaccinated2.jpg" alt="#GetVaccinated" height="280px" width="33%">
+                <img src="getvaccinated3.jpg" alt="#GetVaccinated" height="280px" width="33%"> <br>
             </div>
             <br>
             <li><a href="http://janaushadhi.gov.in/StoreDetails.aspx" target="_blank">To buy Remdesivir Injection</a>
@@ -199,11 +209,76 @@
             <li><a href="https://docs.google.com/document/d/1TUCTpW-Hc-zVqXAWapQv3kW7NrHPD96013RcYTJmqPc/edit?usp=drivesdk" target="_blank">COVID_Help_Link</a></li>
             <div id="link4">
             These links are verified use them wisely & spread the sheet
+             </div>
         </ul>
-        </div>
+        <ul>
+            <li>Message if COVID emergency</li>
+            <div id="link5">
+                Bot providing instant pan-India help for verified Oxygen, Hospital Beds, Ambulance and other highly sought-after medical resources.Just text 'COVID' to get started.
+                <br>
+
+                <i class="fa fa-whatsapp" >+1 (234) 517-8991</i>
+                <br>
+                
+                They usually respond instantly. If they don't, please give them some time to get back.
+
+            </div>
+        </ul>
     </div>
 
+<div class="plasma">
+    Plasma Therapy
+</div><hr>
+<div id="aboutplasmatherapy">
+    <ul>
+        <li >What is convalescent plasma therapy?</li>
+    </ul>
+    ==>>Convalescent plasma treatment involves injecting the COVID-19 patient with convalescent sera of people who recovered from the infection recently. The patient cured of the disease will have antibodies that drive coronavirus away, says the report of the WHO-China Joint Mission on COVID-19.
+    <br><br>
+    <ul><li>
+        What is the meaning of convalescent sera for COVID-19 and how does it act?
+    </li></ul>
+    ==>>The serum of COVID-19 cured individuals will have virus-neutralising antibodies which will act as a passive antibody therapy. It is called convalescent sera of COVID-19.
+<br><br>
+<ul><li>
+    How can we collect convalescent sera?
+</li></ul>
+==>>We can collect it in two ways: <br><br>
+<ol><li>Using routine blood withdrawal followed by centrifuge technique. Here we can collect 180 ml to 220 ml of convalescent sera and we can store it in -60 degree C up to one year.</li>
+<li>Using aphresis machine/cell separator machine, we can collect even 600 ml of convalescent sera at one time and safely store for a year.</li>
+</ol>
+<ul><li>Who will be a suitable candidate to receive convalescent sera of COVID-19?</li></ul>
+==>>Those who are suffering from SARS-CoV-2 infection with moderate/severe sepsis with or without ventilator support. <br><br>
+<ul><li>What is the dose, frequency and duration of convalescent sera?</li></ul>
+==>>The process of removal of abnormal substances from circulation which are either present in plasma or are tightly bound to plasma proteins is known as therapeutic plasma exchange. In COVID-19 patients, their plasma will contain enormous inflammatory mediators which cause severe lung injury. <br><br>
+<ul><li>What will be the better proposed model for COVID-19 sick patients?</li></ul>
+==>>Based on previous experiences with other diseases, in COVID-19 severe cases, a combination of therapeutic plasma exchange technique using convalescent sera will reduce the “cytokine storm” which will help recovery. <br><br>
+Advantages of the therapy are that it is the viable option in our healthcare system; it is quickly doable and there are no major side effects. The most important thing is that convalescent sera is easily transportable to any part of the country/worldwide by maintaining adequate cold-chain process similar to vaccine. <br><br>
 
+</div>
+
+<div id="plasmaupdates">
+    <div id="latest_updates">latest updates on plasma Therapy</div>
+    <div id="bottomvid">
+    <iframe width="100%" height="500px" src="https://www.youtube.com/embed/o8saTdnXZbA"></iframe></div>
+    
+  The use of convalescent plasma has been dropped from the recommended treatment guidelines for COVID-19, according to late Monday advisory from the Indian Council of Medical Research (ICMR).
+  <br><br>
+  The National Task Force of the ICMR, along with experts from the Health Ministry, periodically updates guidelines on recommended modes of treatment. Registered Doctors anywhere, however, aren’t bound by the Task Force recommendations.
+  <br><br>
+  Though a trial by the ICMR on 400 patients last year — called the PLACID trial — had found no significant benefit from the use of plasma it continued to find a place in the recommended guidelines, in ‘off label’ use.
+
+<br><br>
+Several other international trials had also found no benefit from plasma therapy. In fact some experts have said the use of such plasma may have even played a role in the facilitating new worrisome mutations to the virus.
+<br><br>
+The most recent study published in the British medical journal The Lancet on May 14, reported that in a double blinded trial involving about 5,000 patients who got the treatment in the United Kingdom, again no benefit was found in reducing mortality, or improving patient outcomes.
+<br><br>
+
+==>> These way can only be applied to 10% of COVID positive people in <b>INDIA</b> and about not more than 3% is this way effective. <br> <br>
+FOR MORE DETAILE tap below:  <br>
+  <a href="https://youtu.be/o8saTdnXZbA" target="_blank">plasma_therapy_failed</a>
+</div>
+</div>
 
     <hr>
     <footer>
